--- a/template.yaml
+++ b/template.yaml
@@ -23,8 +23,36 @@ Resources:
         GetCompetencies:
           Type: Api
           Properties:
-            Path: /competencies
-            Method: get
+            Path: /competencies # What should the official API url be? It will be whatever you type here
+            Method: get # Which HTTP method (get, post, delete, etc.) should will invoke this lambda when an API call is made at this path?
+  AddUserFunction:
+    Type: AWS::Serverless::Function # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html
+    Properties:
+      CodeUri: functions/users/
+      Handler: post.lambdaHandler
+      Runtime: nodejs12.x
+      Events:
+        GetCompetencies:
+          Type: Api
+          Properties:
+            Path: /users
+            Method: post
+      Policies: # Lists permissions; what is this lambda allowed to do/interact with?
+        - Statement:
+          - Sid: DynamoDBPutPolicy # Creates a specific, custom inline policy
+            Effect: Allow
+            Action:
+              - dynamodb:PutItem
+            Resource:
+              - !Sub
+                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
+                - { tableName: !Ref UsersDDBTable}
+              - !Sub
+                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/index/*
+                - { tableName: !Ref UsersDDBTable}
+      Environment:
+        Variables:
+          USERS_DDB_TABLE_NAME: !Ref UsersDDBTable # Allows us to access the var "USERS_DDB_TABLE_NAME" in this lambda's javascript code
 
   ############ DynamoDB Databases ############
   CompetenciesMasterDDBTable: # Master table to store info about each competency
@@ -40,7 +68,7 @@ Resources:
         ReadCapacityUnits: "5"
         WriteCapacityUnits: "5"
       TableName: "CompetenciesMaster"
-  TrackingLogDDBTable: # Holds all individual evaluations
+  EvaluationsDDBTable: # Holds all individual evaluations
     Type: AWS::DynamoDB::Table
     Properties: 
       AttributeDefinitions: 
@@ -67,8 +95,7 @@ Resources:
       ProvisionedThroughput: 
         ReadCapacityUnits: "5"
         WriteCapacityUnits: "5"
-      TableName: "TrackingLog"
-
+      TableName: "Evaluations"
   UsersDDBTable: # Stores info for all possible users of this application (students, faculty/staff, etc.)
     Type: AWS::DynamoDB::Table
     Properties: 
@@ -82,7 +109,6 @@ Resources:
         ReadCapacityUnits: "5"
         WriteCapacityUnits: "5"
       TableName: "Users"
-
   TrackingLocationToCompetenciesDDBTable: # Maps the tracking location (a class or type of advising) to all competencies evaluated in that class/advising type
     Type: AWS::DynamoDB::Table
     Properties: 
@@ -96,7 +122,6 @@ Resources:
         ReadCapacityUnits: "5"
         WriteCapacityUnits: "5"
       TableName: "TrackingLocationToCompetencies"
-
   UsersToTrackingLocationDDBTable: # Maps a given user to all the tracking locations they are currently a part of (essentially a student's schedule)
     Type: AWS::DynamoDB::Table
     Properties: 
@@ -110,7 +135,6 @@ Resources:
         ReadCapacityUnits: "5"
         WriteCapacityUnits: "5"
       TableName: "UsersToTrackingLocation"
-
   EvaluationScaleDDBTable: # Contains the textual description of what each evaluation score represents
     Type: AWS::DynamoDB::Table
     Properties: 
