--- a/template.yaml
+++ b/template.yaml
@@ -56,7 +56,7 @@ Resources:
   AddTrackingLocationToCompetenciesFunction:
     Type: AWS::Serverless::Function # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html
     Properties:
-      CodeUri: functions/tracking_locations_to_competencies/
+      CodeUri: functions/tracking_location_to_competencies/
       Handler: post.lambdaHandler
       Runtime: nodejs12.x
       Events:
@@ -81,6 +81,34 @@ Resources:
       Environment:
         Variables:
           TRACKING_LOCATIONS_TO_COMPETENCIES_DDB_TABLE_NAME: !Ref TrackingLocationToCompetenciesDDBTable # Allows us to access the var "USERS_DDB_TABLE_NAME" in this lambda's javascript code
+  DeleteTrackingLocationToCompetenciesFunction:
+    Type: AWS::Serverless::Function # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html
+    Properties:
+      CodeUri: functions/tracking_location_to_competencies/
+      Handler: delete.lambdaHandler
+      Runtime: nodejs12.x
+      Events:
+        DeleteEvaluation:
+          Type: Api
+          Properties:
+            Path: /TrackingLocationToCompetencies
+            Method: delete
+      Policies: # Lists permissions; what is this lambda allowed to do/interact with?
+        - Statement:
+          - Sid: DynamoDBDeletePolicy # Creates a specific, custom inline policy
+            Effect: Allow
+            Action:
+              - dynamodb:DeleteItem
+            Resource:
+              - !Sub
+                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
+                - { tableName: !Ref TrackingLocationToCompetenciesDDBTable}
+              - !Sub
+                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/index/*
+                - { tableName: !Ref TrackingLocationToCompetenciesDDBTable}
+      Environment:
+        Variables:
+          EVALUATIONS_DDB_TABLE_NAME: !Ref TrackingLocationToCompetenciesDDBTable # Allows us to access the var "EVALUATIONS_DDB_TABLE_NAME" in this lambda's javascript code  
 
   ############ DynamoDB Databases ############
   CompetenciesMasterDDBTable: # Master table to store info about each competency
