--- a/template.yaml
+++ b/template.yaml
@@ -71,6 +71,7 @@ Resources:
             Effect: Allow
             Action:
               - dynamodb:DeleteItem
+              - dynamodb:GetItem
             Resource:
               - !Sub
                 - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
