--- a/template.yaml
+++ b/template.yaml
@@ -25,24 +25,26 @@ Resources:
           Properties:
             Path: /competencies # What should the official API url be? It will be whatever you type here
             Method: get # Which HTTP method (get, post, delete, etc.) should will invoke this lambda when an API call is made at this path?
-  DeleteCompetenciesFunction:
+  DeleteSpecificCompetencyFunction:
     Type: AWS::Serverless::Function # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html
     Properties:
-      CodeUri: functions/competencies/
+      CodeUri: functions/competencies/{competencyId}
       Handler: delete.lambdaHandler
       Runtime: nodejs12.x
       Events:
         GetCompetencies:
           Type: Api
           Properties:
-            Path: /competencies
+            Path: /competencies/{competencyId}
             Method: delete
       Policies: # Lists permissions; what is this lambda allowed to do/interact with?
         - Statement:
-          - Sid: DynamoDBDeletePolicy # Creates a specific, custom inline policy
+          - Sid: DynamoDBDeleteAndGetPolicy # Creates a specific, custom inline policy
             Effect: Allow
             Action:
               - dynamodb:DeleteItem
+              - dynamodb:GetItem
+            # Add resources for DelteComp
             Resource:
               - !Sub
                 - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
