--- a/template.yaml
+++ b/template.yaml
@@ -109,6 +109,34 @@ Resources:
       Environment:
         Variables:
           EVALUATIONS_DDB_TABLE_NAME: !Ref TrackingLocationToCompetenciesDDBTable # Allows us to access the var "EVALUATIONS_DDB_TABLE_NAME" in this lambda's javascript code  
+  GetSpecificTrackingLocationToCompetenciesFunction:
+    Type: AWS::Serverless::Function # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html
+    Properties:
+      CodeUri: functions/tracking_location_to_competencies/{trackingLocationId}
+      Handler: get.lambdaHandler
+      Runtime: nodejs12.x
+      Events:
+        GetCompetencies:
+          Type: Api
+          Properties:
+            Path: /TrackingLocationToCompetencies/{trackingLocationId}
+            Method: get
+      Policies: # Lists permissions; what is this lambda allowed to do/interact with?
+        - Statement:
+          - Sid: DynamoDBGetPolicy
+            Effect: Allow
+            Action:
+              - dynamodb:GetItem
+            Resource:
+              - !Sub
+                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
+                - { tableName: !Ref TrackingLocationToCompetenciesDDBTable}
+              - !Sub
+                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/index/*
+                - { tableName: !Ref TrackingLocationToCompetenciesDDBTable}
+      Environment:
+        Variables:
+          USERS_DDB_TABLE_NAME: !Ref TrackingLocationToCompetenciesDDBTable
 
   ############ DynamoDB Databases ############
   CompetenciesMasterDDBTable: # Master table to store info about each competency
