get and post working properly, need to add randomized locationId

--- a/template.yaml
+++ b/template.yaml
@@ -108,7 +108,7 @@ Resources:
                 - { tableName: !Ref TrackingLocationToCompetenciesDDBTable}
       Environment:
         Variables:
-          EVALUATIONS_DDB_TABLE_NAME: !Ref TrackingLocationToCompetenciesDDBTable # Allows us to access the var "EVALUATIONS_DDB_TABLE_NAME" in this lambda's javascript code  
+          TRACKING_LOCATIONS_TO_COMPETENCIES_DDB_TABLE_NAME: !Ref TrackingLocationToCompetenciesDDBTable # Allows us to access the var "EVALUATIONS_DDB_TABLE_NAME" in this lambda's javascript code  
   GetSpecificTrackingLocationToCompetenciesFunction:
     Type: AWS::Serverless::Function # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html
     Properties:
@@ -136,7 +136,7 @@ Resources:
                 - { tableName: !Ref TrackingLocationToCompetenciesDDBTable}
       Environment:
         Variables:
-          USERS_DDB_TABLE_NAME: !Ref TrackingLocationToCompetenciesDDBTable
+          TRACKING_LOCATIONS_TO_COMPETENCIES_DDB_TABLE_NAME: !Ref TrackingLocationToCompetenciesDDBTable
 
   ############ DynamoDB Databases ############
   CompetenciesMasterDDBTable: # Master table to store info about each competency
