--- a/template.yaml
+++ b/template.yaml
@@ -71,6 +71,8 @@ Resources:
             Effect: Allow
             Action:
               - dynamodb:PutItem
+              - dynamodb:Scan
+              - dynamodb:GetItem
             Resource: # this should stay!
               - !Sub
                 - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
