--- a/template.yaml
+++ b/template.yaml
@@ -101,6 +101,7 @@ Resources:
             Effect: Allow
             Action:
               - dynamodb:DeleteItem
+              - dynamodb:GetItem
             Resource: # this should stay too!
               - !Sub
                 - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
