--- a/template.yaml
+++ b/template.yaml
@@ -130,7 +130,7 @@ Resources:
             Effect: Allow
             Action:
               - dynamodb:GetItem
-            Resource:
+            Resource: # this should stay as well!
               - !Sub
                 - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
                 - { tableName: !Ref TrackingLocationToCompetenciesDDBTable}
